# agent-experiments

./: README.md  architecture.md  pyproject.toml  replit-followup-prompt.md  test_fal.py
image_generation_agent/agent_adk/: agent_adk.py  architecture.md
image_generation_agent/agent_adk_gemini/: agent_adk_gemini.py  architecture.md
image_generation_agent/agent_adk_openai/: agent_adk_openai.py  architecture.md
image_generation_agent/agent_guide/: agent_guide.py
image_generation_agent/whatsapp_twilio/: architecture.md  whatsapp_twilio.py
image_generation_agent/whatsapp_twilio/agents/: image_agent.py  orchestrator_agent.py
image_generation_agent/whatsapp_twilio/core/: twilio_verify.py
tech_finder_agent/agent_tech_finder/: agent_tech_finder.py  architecture.md
tech_newsletter_agent/agent_tech_newsletter/: agent_tech_newsletter.py  architecture.md
whatsapp_hub/agent_whatsapp_hub/: agent_whatsapp_hub.py  architecture.md
